# claude-code-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  ccd.py  pyproject.toml
local-claude/: .local-claude.env.example  local-claude
src/ccd/: ccd.py
