[project]
name = "ccd"
version = "0.1.2"
description = "Claude Code Docker - A Docker image for running Coding Agents like Claude Code, Gemini, Codex, Copilot and more."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ccd = "ccd.ccd:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length=160